{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 50,
  "lineage": "b3877151-5a59-2aa0-b66f-fcd17cdfb472",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "devops-test-eip-natgw-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de912ae5c8aae108",
            "association_id": "eipassoc-097f4b45e96a702e9",
            "domain": "vpc",
            "id": "eipalloc-0de912ae5c8aae108",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07b5c9ca50288f0c7",
            "private_dns": "ip-10-0-10-170.ec2.internal",
            "private_ip": "10.0.10.170",
            "public_dns": "ec2-44-207-42-144.compute-1.amazonaws.com",
            "public_ip": "44.207.42.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-test-eip-natgw-1a-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-eip-natgw-1a-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "devops-test-eip-natgw-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015f4b0369565beb9",
            "association_id": "eipassoc-07930296c3024a33f",
            "domain": "vpc",
            "id": "eipalloc-015f4b0369565beb9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-000f98ebe36230b08",
            "private_dns": "ip-10-0-10-214.ec2.internal",
            "private_ip": "10.0.10.214",
            "public_dns": "ec2-54-92-234-192.compute-1.amazonaws.com",
            "public_ip": "54.92.234.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-test-eip-natgw-1b-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-eip-natgw-1b-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops-test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248772781588:internet-gateway/igw-0e9a6fd69987080f9",
            "id": "igw-0e9a6fd69987080f9",
            "owner_id": "248772781588",
            "tags": {
              "Name": "devops-test-igw-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-igw-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "dependencies": [
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops-test-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248772781588:loadbalancer/app/devops-test-alb-eiji-kumamoto/3abfd345ef24c7f3",
            "arn_suffix": "app/devops-test-alb-eiji-kumamoto/3abfd345ef24c7f3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-test-alb-eiji-kumamoto-973243752.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:248772781588:loadbalancer/app/devops-test-alb-eiji-kumamoto/3abfd345ef24c7f3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-test-alb-eiji-kumamoto",
            "security_groups": [
              "sg-0b2d94f74dabaf208"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0732a8f0072f90d94"
              },
              {
                "subnet_id": "subnet-0be83052b06c30de5"
              }
            ],
            "subnets": [
              "subnet-0732a8f0072f90d94",
              "subnet-0be83052b06c30de5"
            ],
            "tags_all": {
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "vpc_id": "vpc-0c559ed8ff144f290",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.devops-test-sg-alb",
            "aws_subnet.devops-test-public-subnet-1a",
            "aws_subnet.devops-test-public-subnet-1b",
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops-test-alb-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248772781588:listener/app/devops-test-alb-eiji-kumamoto/3abfd345ef24c7f3/53758dcec1f47705",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:248772781588:listener/app/devops-test-alb-eiji-kumamoto/3abfd345ef24c7f3/53758dcec1f47705",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:248772781588:loadbalancer/app/devops-test-alb-eiji-kumamoto/3abfd345ef24c7f3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops-test-alb",
            "aws_security_group.devops-test-sg-alb",
            "aws_subnet.devops-test-public-subnet-1a",
            "aws_subnet.devops-test-public-subnet-1b",
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops-test-alb-listener-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248772781588:listener/app/devops-test-alb-eiji-kumamoto/3abfd345ef24c7f3/391f61eaae681dbb",
            "certificate_arn": "arn:aws:acm:us-east-1:248772781588:certificate/603d511e-19f5-48d9-86bd-efab2562b589",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:248772781588:targetgroup/devops-test-alb-tg-eiji-kumamoto/c1ecc786f97023e7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:248772781588:listener/app/devops-test-alb-eiji-kumamoto/3abfd345ef24c7f3/391f61eaae681dbb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:248772781588:loadbalancer/app/devops-test-alb-eiji-kumamoto/3abfd345ef24c7f3",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.devops-test-self-sign-acm",
            "aws_lb.devops-test-alb",
            "aws_lb_target_group.devops-test-alb-tg",
            "aws_security_group.devops-test-sg-alb",
            "aws_subnet.devops-test-public-subnet-1a",
            "aws_subnet.devops-test-public-subnet-1b",
            "aws_vpc.devops-test-vpc",
            "tls_private_key.devops-test-tls-private-key",
            "tls_self_signed_cert.devops-test-self-sign-cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devop-test-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248772781588:targetgroup/devop-test-alb-tg-eiji-kumamoto/11d6127711a39761",
            "arn_suffix": "targetgroup/devop-test-alb-tg-eiji-kumamoto/11d6127711a39761",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:248772781588:targetgroup/devop-test-alb-tg-eiji-kumamoto/11d6127711a39761",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "devop-test-alb-tg-eiji-kumamoto",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "dependencies": [
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops-test-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248772781588:targetgroup/devops-test-alb-tg-eiji-kumamoto/c1ecc786f97023e7",
            "arn_suffix": "targetgroup/devops-test-alb-tg-eiji-kumamoto/c1ecc786f97023e7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:248772781588:targetgroup/devops-test-alb-tg-eiji-kumamoto/c1ecc786f97023e7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "devops-test-alb-tg-eiji-kumamoto",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "dependencies": [
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "devops-test-natgw-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de912ae5c8aae108",
            "connectivity_type": "public",
            "id": "nat-086256a830cbdce3a",
            "network_interface_id": "eni-07b5c9ca50288f0c7",
            "private_ip": "10.0.10.170",
            "public_ip": "44.207.42.144",
            "subnet_id": "subnet-0732a8f0072f90d94",
            "tags": {
              "Name": "devops-test-natgw-1a-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-natgw-1a-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            }
          },
          "dependencies": [
            "aws_eip.devops-test-eip-natgw-1a",
            "aws_internet_gateway.devops-test-igw",
            "aws_subnet.devops-test-public-subnet-1a",
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "devops-test-natgw-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015f4b0369565beb9",
            "connectivity_type": "public",
            "id": "nat-0d451bd41faa8f926",
            "network_interface_id": "eni-000f98ebe36230b08",
            "private_ip": "10.0.10.214",
            "public_ip": "54.92.234.192",
            "subnet_id": "subnet-0be83052b06c30de5",
            "tags": {
              "Name": "devops-test-natgw-1b-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-natgw-1b-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            }
          },
          "dependencies": [
            "aws_eip.devops-test-eip-natgw-1b",
            "aws_internet_gateway.devops-test-igw",
            "aws_subnet.devops-test-public-subnet-1b",
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops-test-rt-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248772781588:route-table/rtb-0082ec2fd3a10fd8a",
            "id": "rtb-0082ec2fd3a10fd8a",
            "owner_id": "248772781588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086256a830cbdce3a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-test-rt-private-1a-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-rt-private-1a-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.devops-test-eip-natgw-1a",
            "aws_internet_gateway.devops-test-igw",
            "aws_nat_gateway.devops-test-natgw-1a",
            "aws_subnet.devops-test-public-subnet-1a",
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops-test-rt-private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248772781588:route-table/rtb-0af0fefb184462bd9",
            "id": "rtb-0af0fefb184462bd9",
            "owner_id": "248772781588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d451bd41faa8f926",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-test-rt-private-1b-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-rt-private-1b-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.devops-test-eip-natgw-1b",
            "aws_internet_gateway.devops-test-igw",
            "aws_nat_gateway.devops-test-natgw-1b",
            "aws_subnet.devops-test-public-subnet-1b",
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops-test-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248772781588:route-table/rtb-008c2b68d74804035",
            "id": "rtb-008c2b68d74804035",
            "owner_id": "248772781588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9a6fd69987080f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-test-rt-public-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-rt-public-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops-test-igw",
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-test-rt-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07067103d6258a7c7",
            "route_table_id": "rtb-0082ec2fd3a10fd8a",
            "subnet_id": "subnet-0b46168f7d295a9a8"
          },
          "dependencies": [
            "aws_eip.devops-test-eip-natgw-1a",
            "aws_internet_gateway.devops-test-igw",
            "aws_nat_gateway.devops-test-natgw-1a",
            "aws_route_table.devops-test-rt-private-1a",
            "aws_subnet.devops-test-private-subnet-1a",
            "aws_subnet.devops-test-public-subnet-1a",
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-test-rt-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bc52b0c406e622b",
            "route_table_id": "rtb-0af0fefb184462bd9",
            "subnet_id": "subnet-060d226d54187de48"
          },
          "dependencies": [
            "aws_eip.devops-test-eip-natgw-1b",
            "aws_internet_gateway.devops-test-igw",
            "aws_nat_gateway.devops-test-natgw-1b",
            "aws_route_table.devops-test-rt-private-1b",
            "aws_subnet.devops-test-private-subnet-1b",
            "aws_subnet.devops-test-public-subnet-1b",
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-test-rt-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9f3b5bcaa5eef79",
            "route_table_id": "rtb-008c2b68d74804035",
            "subnet_id": "subnet-0732a8f0072f90d94"
          },
          "dependencies": [
            "aws_internet_gateway.devops-test-igw",
            "aws_route_table.devops-test-rt-public",
            "aws_subnet.devops-test-public-subnet-1a",
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-test-rt-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009c1cf1c4b2763c8",
            "route_table_id": "rtb-008c2b68d74804035",
            "subnet_id": "subnet-0be83052b06c30de5"
          },
          "dependencies": [
            "aws_internet_gateway.devops-test-igw",
            "aws_route_table.devops-test-rt-public",
            "aws_subnet.devops-test-public-subnet-1b",
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-test-sg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248772781588:security-group/sg-0b2d94f74dabaf208",
            "description": "Allow HTTP Traffic to DevOps Test ALB from the Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2d94f74dabaf208",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-test-sg-alb-eiji-kumamoto",
            "name_prefix": "",
            "owner_id": "248772781588",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-test-sg-alb-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-sg-alb-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-test-sg-vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248772781588:security-group/sg-0dbb4937e69e1c6f4",
            "description": "Allow HTTP Traffic to the DevOps Test ASG VMs from the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbb4937e69e1c6f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.10.0/24"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-test-sg-vms-eiji-kumamoto",
            "name_prefix": "",
            "owner_id": "248772781588",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-test-sg-vms-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-sg-vms-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-test-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248772781588:subnet/subnet-0b46168f7d295a9a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b46168f7d295a9a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248772781588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-test-private-subnet-1a-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-private-subnet-1a-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "dependencies": [
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-test-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248772781588:subnet/subnet-060d226d54187de48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060d226d54187de48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248772781588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-test-private-subnet-1b-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-private-subnet-1b-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "dependencies": [
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-test-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248772781588:subnet/subnet-0732a8f0072f90d94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0732a8f0072f90d94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248772781588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-test-public-subnet-1a-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-public-subnet-1a-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "dependencies": [
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-test-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248772781588:subnet/subnet-0be83052b06c30de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be83052b06c30de5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248772781588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-test-public-subnet-1b-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-public-subnet-1b-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            },
            "vpc_id": "vpc-0c559ed8ff144f290"
          },
          "dependencies": [
            "aws_vpc.devops-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops-test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248772781588:vpc/vpc-0c559ed8ff144f290",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.10.0/24",
            "default_network_acl_id": "acl-0b2330c095804154c",
            "default_route_table_id": "rtb-012bcabaa83bc6a2e",
            "default_security_group_id": "sg-032890c12cecab547",
            "dhcp_options_id": "dopt-95678df1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c559ed8ff144f290",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012bcabaa83bc6a2e",
            "owner_id": "248772781588",
            "tags": {
              "Name": "devops-test-vpc-eiji-kumamoto"
            },
            "tags_all": {
              "Name": "devops-test-vpc-eiji-kumamoto",
              "owner": "eiji-kumamoto",
              "purpose": "tf-hiring-test"
            }
          }
        }
      ]
    }
  ]
}